allow filtering pets by species
